# mev-finder

./: .gitignore  CHANGELOG.md  check.smt  check2.smt  eval.sh  graph.py  log_file  mev-analysis.cabal  out
app/: Ast.hs  BytecodeDecode.hs  ConcreteSem.hs  Env.hs  GenericSem.hs  IConcrete.hs  Main.hs  Memory.hs  SymbolicSem.hs  Uint256.hs  Utils.hs  Z3.hs
app/Concrete/: Interface.hs  Memory.hs  Sem.hs
app/Symbolic/: Interface.hs  MEV.hs  SMT.hs
examples/: Makefile
examples/src/: AMM.sol  AirDrop.sol  Allower.sol  Bank.sol  Blacklist.sol  BoundedWithdrawer.sol  CoinPusher.sol  Crowdfund.sol  Echo.sol  FakeAMM.sol  GetSet.sol  HashLock.sol  Password.sol  Summer.sol  TokenStore.sol  TokenWithdrawer.sol  Whitelist.sol  Withdrawer.sol
lib/: Benchmark.hs  Env.hs  GenericSem.hs  Main.hs  Utils.hs
lib/Concrete/: IERC20.hs  Interface.hs  MEV.hs  Memory.hs  Sem.hs  Uint256.hs  Utils.hs
lib/Solidity/: BytecodeDecode.hs
lib/Symbolic/: Interface.hs  MEV.hs  SMT.hs  Sem.hs
tests/: Test.hs
