cabal-version:      2.4
name:               mev-analysis
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             petitnau
maintainer:         roberto.pettinau99@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library mev-analysis-lib
    exposed-modules: Ast, Utils, Env, Concrete.Memory, Concrete.Uint256, Solidity.BytecodeDecode, Concrete.Sem, Concrete.MEV, Symbolic.Sem, Symbolic.SMT, 
        GenericSem, Concrete.Interface, Concrete.Utils, Symbolic.Interface, Symbolic.MEV, Benchmark

    build-depends:    base, data-dword, composition, composition-extra, memory, keccak, hex-text, text, mtl, bytestring, process, protolude, 
        bv, parameterized-utils, utility-ht, extra, binary, tasty, hslogger, random, containers
    hs-source-dirs:   lib
    default-language: Haskell2010

executable mev-analysis
    main-is:          Main.hs

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, data-dword, composition, composition-extra, memory, keccak, hex-text, text, mtl, bytestring, process, protolude, 
        bv, parameterized-utils, utility-ht, extra, binary, mev-analysis-lib, tasty, hslogger
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Test.hs
    build-depends: base, tasty, tasty-hunit, mev-analysis-lib
    hs-source-dirs: tests
    default-language: Haskell2010
 